tests/baselines/reference/FunctionDeclaration3.errors.txt
FunctionDeclaration3.ts(1,10): error TS2391: Function implementation is missing or not immediately following the declaration.
FunctionDeclaration3.ts(1,10): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.


==== FunctionDeclaration3.ts (2 errors) ====
    function foo();
             ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
             ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.